Assignment2/y.output
Terminals unused in grammar

    BOOLEAN


State 135 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: FuncMain declarations
    2        | declarations_plus FuncMain declarations

    3 declarations: ε
    4             | declarations declaration

    5 declarations_plus: declaration
    6                  | declarations_plus declaration

    7 declaration: VarDecl
    8            | FuncDecl
    9            | ClassDecl

   10 FuncMain: VOID MAIN ROUNDLBRACKET ROUNDRBRACKET StmtBlock

   11 VarDecl: type IDENTIFIER SEMICOLON
   12        | IDENTIFIER NEWARRAY ROUNDLBRACKET INTEGER COMMA type ROUNDRBRACKET SEMICOLON

   13 FuncDecl: type IDENTIFIER ROUNDLBRACKET formalParameters ROUNDRBRACKET StmtBlock

   14 ClassDecl: CLASS IDENTIFIER CURLYLBRACKET FieldList CURLYRBRACKET

   15 FieldList: ε
   16          | FieldList field

   17 field: VarDecl
   18      | FuncDecl

   19 type: INT
   20     | DOUBLE
   21     | BOOL
   22     | STRING
   23     | VOID

   24 formalParameters: ε
   25                 | formalParameterList

   26 formalParameterList: formalParameter
   27                    | formalParameterList COMMA formalParameter

   28 formalParameter: type IDENTIFIER

   29 Expression: Lvalue ASSIGNMENT Expression
   30           | Expression ADDITIVE Expression
   31           | Expression MULTIPLITIVE Expression
   32           | Expression RELATIONAL Expression
   33           | Expression EQUALITY Expression
   34           | Expression AND Expression
   35           | Expression OR Expression
   36           | UNARY Expression
   37           | Lvalue
   38           | Call
   39           | NEW ROUNDLBRACKET IDENTIFIER ROUNDRBRACKET
   40           | ROUNDLBRACKET Expression ROUNDRBRACKET

   41 Lvalue: IDENTIFIER
   42       | Expression DOT IDENTIFIER
   43       | Expression SQUARELBRACKET Expression SQUARERBRACKET

   44 Call: IDENTIFIER ROUNDLBRACKET ActualParameters ROUNDRBRACKET
   45     | Expression DOT IDENTIFIER ROUNDLBRACKET ActualParameters ROUNDRBRACKET

   46 ActualParameters: ε
   47                 | ActualParametersList

   48 ActualParametersList: Expression
   49                     | ActualParametersList COMMA Expression

   50 StmtBlock: CURLYLBRACKET Stmts CURLYRBRACKET

   51 Stmts: Statement Stmts
   52      | VarDecl Stmts
   53      | ε

   54 Statement: Expression SEMICOLON
   55          | ConditionalStmt
   56          | LoopStmt
   57          | OtherStmt
   58          | StmtBlock

   59 ConditionalStmt: IF ROUNDLBRACKET Expression ROUNDRBRACKET Statement
   60                | IF ROUNDLBRACKET Expression ROUNDRBRACKET Statement ELSE Statement

   61 LoopStmt: WhileStmt
   62         | ForStmt
   63         | DoWhileStmt

   64 OtherStmt: ReturnStmt
   65          | BreakStmt

   66 WhileStmt: WHILE ROUNDLBRACKET Expression ROUNDRBRACKET Statement

   67 DoWhileStmt: DO Statement WHILE ROUNDLBRACKET Expression ROUNDRBRACKET SEMICOLON

   68 ForStmt: FOR ROUNDLBRACKET Expression SEMICOLON Expression SEMICOLON Expression ROUNDRBRACKET Statement

   69 BreakStmt: BREAK SEMICOLON

   70 ReturnStmt: RETURN Expression SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT (258) 19
    DOUBLE (259) 20
    BOOL (260) 21
    STRING (261) 22
    VOID (262) 10 23
    MAIN (263) 10
    ROUNDLBRACKET (264) 10 12 13 39 40 44 45 59 60 66 67 68
    ROUNDRBRACKET (265) 10 12 13 39 40 44 45 59 60 66 67 68
    SEMICOLON (266) 11 12 54 67 68 69 70
    FOR (267) 68
    BOOLEAN (268)
    IDENTIFIER (269) 11 12 13 14 28 39 41 42 44 45
    MULTIPLITIVE (270) 31
    ADDITIVE (271) 30
    RELATIONAL (272) 32
    EQUALITY (273) 33
    AND (274) 34
    OR (275) 35
    ASSIGNMENT (276) 29
    NEW (277) 39
    CURLYRBRACKET (278) 14 50
    CURLYLBRACKET (279) 14 50
    CLASS (280) 14
    INTEGER (281) 12
    COMMA (282) 12 27 49
    NEWARRAY (283) 12
    UNARY (284) 36
    RETURN (285) 70
    BREAK (286) 69
    IF (287) 59 60
    ELSE (288) 60
    DO (289) 67
    WHILE (290) 66 67
    SQUARERBRACKET (291) 43
    DOT (292) 42 45
    SQUARELBRACKET (293) 43


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    program (40)
        on left: 1 2
        on right: 0
    declarations (41)
        on left: 3 4
        on right: 1 2 4
    declarations_plus (42)
        on left: 5 6
        on right: 2 6
    declaration (43)
        on left: 7 8 9
        on right: 4 5 6
    FuncMain (44)
        on left: 10
        on right: 1 2
    VarDecl (45)
        on left: 11 12
        on right: 7 17 52
    FuncDecl (46)
        on left: 13
        on right: 8 18
    ClassDecl (47)
        on left: 14
        on right: 9
    FieldList (48)
        on left: 15 16
        on right: 14 16
    field (49)
        on left: 17 18
        on right: 16
    type (50)
        on left: 19 20 21 22 23
        on right: 11 12 13 28
    formalParameters (51)
        on left: 24 25
        on right: 13
    formalParameterList (52)
        on left: 26 27
        on right: 25 27
    formalParameter (53)
        on left: 28
        on right: 26 27
    Expression (54)
        on left: 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 29 30 31 32 33 34 35 36 40 42 43 45 48 49 54 59 60 66 67 68 70
    Lvalue (55)
        on left: 41 42 43
        on right: 29 37
    Call (56)
        on left: 44 45
        on right: 38
    ActualParameters (57)
        on left: 46 47
        on right: 44 45
    ActualParametersList (58)
        on left: 48 49
        on right: 47 49
    StmtBlock (59)
        on left: 50
        on right: 10 13 58
    Stmts (60)
        on left: 51 52 53
        on right: 50 51 52
    Statement (61)
        on left: 54 55 56 57 58
        on right: 51 59 60 66 67 68
    ConditionalStmt (62)
        on left: 59 60
        on right: 55
    LoopStmt (63)
        on left: 61 62 63
        on right: 56
    OtherStmt (64)
        on left: 64 65
        on right: 57
    WhileStmt (65)
        on left: 66
        on right: 61
    DoWhileStmt (66)
        on left: 67
        on right: 63
    ForStmt (67)
        on left: 68
        on right: 62
    BreakStmt (68)
        on left: 69
        on right: 65
    ReturnStmt (69)
        on left: 70
        on right: 64


State 0

    0 $accept: • program $end

    INT         shift, and go to state 1
    DOUBLE      shift, and go to state 2
    BOOL        shift, and go to state 3
    STRING      shift, and go to state 4
    VOID        shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    CLASS       shift, and go to state 7

    program            go to state 8
    declarations_plus  go to state 9
    declaration        go to state 10
    FuncMain           go to state 11
    VarDecl            go to state 12
    FuncDecl           go to state 13
    ClassDecl          go to state 14
    type               go to state 15


State 1

   19 type: INT •

    $default  reduce using rule 19 (type)


State 2

   20 type: DOUBLE •

    $default  reduce using rule 20 (type)


State 3

   21 type: BOOL •

    $default  reduce using rule 21 (type)


State 4

   22 type: STRING •

    $default  reduce using rule 22 (type)


State 5

   10 FuncMain: VOID • MAIN ROUNDLBRACKET ROUNDRBRACKET StmtBlock
   23 type: VOID •

    MAIN  shift, and go to state 16

    $default  reduce using rule 23 (type)


State 6

   12 VarDecl: IDENTIFIER • NEWARRAY ROUNDLBRACKET INTEGER COMMA type ROUNDRBRACKET SEMICOLON

    NEWARRAY  shift, and go to state 17


State 7

   14 ClassDecl: CLASS • IDENTIFIER CURLYLBRACKET FieldList CURLYRBRACKET

    IDENTIFIER  shift, and go to state 18


State 8

    0 $accept: program • $end

    $end  shift, and go to state 19


State 9

    2 program: declarations_plus • FuncMain declarations
    6 declarations_plus: declarations_plus • declaration

    INT         shift, and go to state 1
    DOUBLE      shift, and go to state 2
    BOOL        shift, and go to state 3
    STRING      shift, and go to state 4
    VOID        shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    CLASS       shift, and go to state 7

    declaration  go to state 20
    FuncMain     go to state 21
    VarDecl      go to state 12
    FuncDecl     go to state 13
    ClassDecl    go to state 14
    type         go to state 15


State 10

    5 declarations_plus: declaration •

    $default  reduce using rule 5 (declarations_plus)


State 11

    1 program: FuncMain • declarations

    $default  reduce using rule 3 (declarations)

    declarations  go to state 22


State 12

    7 declaration: VarDecl •

    $default  reduce using rule 7 (declaration)


State 13

    8 declaration: FuncDecl •

    $default  reduce using rule 8 (declaration)


State 14

    9 declaration: ClassDecl •

    $default  reduce using rule 9 (declaration)


State 15

   11 VarDecl: type • IDENTIFIER SEMICOLON
   13 FuncDecl: type • IDENTIFIER ROUNDLBRACKET formalParameters ROUNDRBRACKET StmtBlock

    IDENTIFIER  shift, and go to state 23


State 16

   10 FuncMain: VOID MAIN • ROUNDLBRACKET ROUNDRBRACKET StmtBlock

    ROUNDLBRACKET  shift, and go to state 24


State 17

   12 VarDecl: IDENTIFIER NEWARRAY • ROUNDLBRACKET INTEGER COMMA type ROUNDRBRACKET SEMICOLON

    ROUNDLBRACKET  shift, and go to state 25


State 18

   14 ClassDecl: CLASS IDENTIFIER • CURLYLBRACKET FieldList CURLYRBRACKET

    CURLYLBRACKET  shift, and go to state 26


State 19

    0 $accept: program $end •

    $default  accept


State 20

    6 declarations_plus: declarations_plus declaration •

    $default  reduce using rule 6 (declarations_plus)


State 21

    2 program: declarations_plus FuncMain • declarations

    $default  reduce using rule 3 (declarations)

    declarations  go to state 27


State 22

    1 program: FuncMain declarations •
    4 declarations: declarations • declaration

    INT         shift, and go to state 1
    DOUBLE      shift, and go to state 2
    BOOL        shift, and go to state 3
    STRING      shift, and go to state 4
    VOID        shift, and go to state 28
    IDENTIFIER  shift, and go to state 6
    CLASS       shift, and go to state 7

    $default  reduce using rule 1 (program)

    declaration  go to state 29
    VarDecl      go to state 12
    FuncDecl     go to state 13
    ClassDecl    go to state 14
    type         go to state 15


State 23

   11 VarDecl: type IDENTIFIER • SEMICOLON
   13 FuncDecl: type IDENTIFIER • ROUNDLBRACKET formalParameters ROUNDRBRACKET StmtBlock

    ROUNDLBRACKET  shift, and go to state 30
    SEMICOLON      shift, and go to state 31


State 24

   10 FuncMain: VOID MAIN ROUNDLBRACKET • ROUNDRBRACKET StmtBlock

    ROUNDRBRACKET  shift, and go to state 32


State 25

   12 VarDecl: IDENTIFIER NEWARRAY ROUNDLBRACKET • INTEGER COMMA type ROUNDRBRACKET SEMICOLON

    INTEGER  shift, and go to state 33


State 26

   14 ClassDecl: CLASS IDENTIFIER CURLYLBRACKET • FieldList CURLYRBRACKET

    $default  reduce using rule 15 (FieldList)

    FieldList  go to state 34


State 27

    2 program: declarations_plus FuncMain declarations •
    4 declarations: declarations • declaration

    INT         shift, and go to state 1
    DOUBLE      shift, and go to state 2
    BOOL        shift, and go to state 3
    STRING      shift, and go to state 4
    VOID        shift, and go to state 28
    IDENTIFIER  shift, and go to state 6
    CLASS       shift, and go to state 7

    $default  reduce using rule 2 (program)

    declaration  go to state 29
    VarDecl      go to state 12
    FuncDecl     go to state 13
    ClassDecl    go to state 14
    type         go to state 15


State 28

   23 type: VOID •

    $default  reduce using rule 23 (type)


State 29

    4 declarations: declarations declaration •

    $default  reduce using rule 4 (declarations)


State 30

   13 FuncDecl: type IDENTIFIER ROUNDLBRACKET • formalParameters ROUNDRBRACKET StmtBlock

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    BOOL    shift, and go to state 3
    STRING  shift, and go to state 4
    VOID    shift, and go to state 28

    $default  reduce using rule 24 (formalParameters)

    type                 go to state 35
    formalParameters     go to state 36
    formalParameterList  go to state 37
    formalParameter      go to state 38


State 31

   11 VarDecl: type IDENTIFIER SEMICOLON •

    $default  reduce using rule 11 (VarDecl)


State 32

   10 FuncMain: VOID MAIN ROUNDLBRACKET ROUNDRBRACKET • StmtBlock

    CURLYLBRACKET  shift, and go to state 39

    StmtBlock  go to state 40


State 33

   12 VarDecl: IDENTIFIER NEWARRAY ROUNDLBRACKET INTEGER • COMMA type ROUNDRBRACKET SEMICOLON

    COMMA  shift, and go to state 41


State 34

   14 ClassDecl: CLASS IDENTIFIER CURLYLBRACKET FieldList • CURLYRBRACKET
   16 FieldList: FieldList • field

    INT            shift, and go to state 1
    DOUBLE         shift, and go to state 2
    BOOL           shift, and go to state 3
    STRING         shift, and go to state 4
    VOID           shift, and go to state 28
    IDENTIFIER     shift, and go to state 6
    CURLYRBRACKET  shift, and go to state 42

    VarDecl   go to state 43
    FuncDecl  go to state 44
    field     go to state 45
    type      go to state 15


State 35

   28 formalParameter: type • IDENTIFIER

    IDENTIFIER  shift, and go to state 46


State 36

   13 FuncDecl: type IDENTIFIER ROUNDLBRACKET formalParameters • ROUNDRBRACKET StmtBlock

    ROUNDRBRACKET  shift, and go to state 47


State 37

   25 formalParameters: formalParameterList •
   27 formalParameterList: formalParameterList • COMMA formalParameter

    COMMA  shift, and go to state 48

    $default  reduce using rule 25 (formalParameters)


State 38

   26 formalParameterList: formalParameter •

    $default  reduce using rule 26 (formalParameterList)


State 39

   50 StmtBlock: CURLYLBRACKET • Stmts CURLYRBRACKET

    INT            shift, and go to state 1
    DOUBLE         shift, and go to state 2
    BOOL           shift, and go to state 3
    STRING         shift, and go to state 4
    VOID           shift, and go to state 28
    ROUNDLBRACKET  shift, and go to state 49
    FOR            shift, and go to state 50
    IDENTIFIER     shift, and go to state 51
    NEW            shift, and go to state 52
    CURLYLBRACKET  shift, and go to state 39
    UNARY          shift, and go to state 53
    RETURN         shift, and go to state 54
    BREAK          shift, and go to state 55
    IF             shift, and go to state 56
    DO             shift, and go to state 57
    WHILE          shift, and go to state 58

    $default  reduce using rule 53 (Stmts)

    VarDecl          go to state 59
    type             go to state 60
    Expression       go to state 61
    Lvalue           go to state 62
    Call             go to state 63
    StmtBlock        go to state 64
    Stmts            go to state 65
    Statement        go to state 66
    ConditionalStmt  go to state 67
    LoopStmt         go to state 68
    OtherStmt        go to state 69
    WhileStmt        go to state 70
    DoWhileStmt      go to state 71
    ForStmt          go to state 72
    BreakStmt        go to state 73
    ReturnStmt       go to state 74


State 40

   10 FuncMain: VOID MAIN ROUNDLBRACKET ROUNDRBRACKET StmtBlock •

    $default  reduce using rule 10 (FuncMain)


State 41

   12 VarDecl: IDENTIFIER NEWARRAY ROUNDLBRACKET INTEGER COMMA • type ROUNDRBRACKET SEMICOLON

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    BOOL    shift, and go to state 3
    STRING  shift, and go to state 4
    VOID    shift, and go to state 28

    type  go to state 75


State 42

   14 ClassDecl: CLASS IDENTIFIER CURLYLBRACKET FieldList CURLYRBRACKET •

    $default  reduce using rule 14 (ClassDecl)


State 43

   17 field: VarDecl •

    $default  reduce using rule 17 (field)


State 44

   18 field: FuncDecl •

    $default  reduce using rule 18 (field)


State 45

   16 FieldList: FieldList field •

    $default  reduce using rule 16 (FieldList)


State 46

   28 formalParameter: type IDENTIFIER •

    $default  reduce using rule 28 (formalParameter)


State 47

   13 FuncDecl: type IDENTIFIER ROUNDLBRACKET formalParameters ROUNDRBRACKET • StmtBlock

    CURLYLBRACKET  shift, and go to state 39

    StmtBlock  go to state 76


State 48

   27 formalParameterList: formalParameterList COMMA • formalParameter

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    BOOL    shift, and go to state 3
    STRING  shift, and go to state 4
    VOID    shift, and go to state 28

    type             go to state 35
    formalParameter  go to state 77


State 49

   40 Expression: ROUNDLBRACKET • Expression ROUNDRBRACKET

    ROUNDLBRACKET  shift, and go to state 49
    IDENTIFIER     shift, and go to state 78
    NEW            shift, and go to state 52
    UNARY          shift, and go to state 53

    Expression  go to state 79
    Lvalue      go to state 62
    Call        go to state 63


State 50

   68 ForStmt: FOR • ROUNDLBRACKET Expression SEMICOLON Expression SEMICOLON Expression ROUNDRBRACKET Statement

    ROUNDLBRACKET  shift, and go to state 80


State 51

   12 VarDecl: IDENTIFIER • NEWARRAY ROUNDLBRACKET INTEGER COMMA type ROUNDRBRACKET SEMICOLON
   41 Lvalue: IDENTIFIER •
   44 Call: IDENTIFIER • ROUNDLBRACKET ActualParameters ROUNDRBRACKET

    ROUNDLBRACKET  shift, and go to state 81
    NEWARRAY       shift, and go to state 17

    $default  reduce using rule 41 (Lvalue)


State 52

   39 Expression: NEW • ROUNDLBRACKET IDENTIFIER ROUNDRBRACKET

    ROUNDLBRACKET  shift, and go to state 82


State 53

   36 Expression: UNARY • Expression

    ROUNDLBRACKET  shift, and go to state 49
    IDENTIFIER     shift, and go to state 78
    NEW            shift, and go to state 52
    UNARY          shift, and go to state 53

    Expression  go to state 83
    Lvalue      go to state 62
    Call        go to state 63


State 54

   70 ReturnStmt: RETURN • Expression SEMICOLON

    ROUNDLBRACKET  shift, and go to state 49
    IDENTIFIER     shift, and go to state 78
    NEW            shift, and go to state 52
    UNARY          shift, and go to state 53

    Expression  go to state 84
    Lvalue      go to state 62
    Call        go to state 63


State 55

   69 BreakStmt: BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 85


State 56

   59 ConditionalStmt: IF • ROUNDLBRACKET Expression ROUNDRBRACKET Statement
   60                | IF • ROUNDLBRACKET Expression ROUNDRBRACKET Statement ELSE Statement

    ROUNDLBRACKET  shift, and go to state 86


State 57

   67 DoWhileStmt: DO • Statement WHILE ROUNDLBRACKET Expression ROUNDRBRACKET SEMICOLON

    ROUNDLBRACKET  shift, and go to state 49
    FOR            shift, and go to state 50
    IDENTIFIER     shift, and go to state 78
    NEW            shift, and go to state 52
    CURLYLBRACKET  shift, and go to state 39
    UNARY          shift, and go to state 53
    RETURN         shift, and go to state 54
    BREAK          shift, and go to state 55
    IF             shift, and go to state 56
    DO             shift, and go to state 57
    WHILE          shift, and go to state 58

    Expression       go to state 61
    Lvalue           go to state 62
    Call             go to state 63
    StmtBlock        go to state 64
    Statement        go to state 87
    ConditionalStmt  go to state 67
    LoopStmt         go to state 68
    OtherStmt        go to state 69
    WhileStmt        go to state 70
    DoWhileStmt      go to state 71
    ForStmt          go to state 72
    BreakStmt        go to state 73
    ReturnStmt       go to state 74


State 58

   66 WhileStmt: WHILE • ROUNDLBRACKET Expression ROUNDRBRACKET Statement

    ROUNDLBRACKET  shift, and go to state 88


State 59

   52 Stmts: VarDecl • Stmts

    INT            shift, and go to state 1
    DOUBLE         shift, and go to state 2
    BOOL           shift, and go to state 3
    STRING         shift, and go to state 4
    VOID           shift, and go to state 28
    ROUNDLBRACKET  shift, and go to state 49
    FOR            shift, and go to state 50
    IDENTIFIER     shift, and go to state 51
    NEW            shift, and go to state 52
    CURLYLBRACKET  shift, and go to state 39
    UNARY          shift, and go to state 53
    RETURN         shift, and go to state 54
    BREAK          shift, and go to state 55
    IF             shift, and go to state 56
    DO             shift, and go to state 57
    WHILE          shift, and go to state 58

    $default  reduce using rule 53 (Stmts)

    VarDecl          go to state 59
    type             go to state 60
    Expression       go to state 61
    Lvalue           go to state 62
    Call             go to state 63
    StmtBlock        go to state 64
    Stmts            go to state 89
    Statement        go to state 66
    ConditionalStmt  go to state 67
    LoopStmt         go to state 68
    OtherStmt        go to state 69
    WhileStmt        go to state 70
    DoWhileStmt      go to state 71
    ForStmt          go to state 72
    BreakStmt        go to state 73
    ReturnStmt       go to state 74


State 60

   11 VarDecl: type • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 90


State 61

   30 Expression: Expression • ADDITIVE Expression
   31           | Expression • MULTIPLITIVE Expression
   32           | Expression • RELATIONAL Expression
   33           | Expression • EQUALITY Expression
   34           | Expression • AND Expression
   35           | Expression • OR Expression
   42 Lvalue: Expression • DOT IDENTIFIER
   43       | Expression • SQUARELBRACKET Expression SQUARERBRACKET
   45 Call: Expression • DOT IDENTIFIER ROUNDLBRACKET ActualParameters ROUNDRBRACKET
   54 Statement: Expression • SEMICOLON

    SEMICOLON       shift, and go to state 91
    MULTIPLITIVE    shift, and go to state 92
    ADDITIVE        shift, and go to state 93
    RELATIONAL      shift, and go to state 94
    EQUALITY        shift, and go to state 95
    AND             shift, and go to state 96
    OR              shift, and go to state 97
    DOT             shift, and go to state 98
    SQUARELBRACKET  shift, and go to state 99


State 62

   29 Expression: Lvalue • ASSIGNMENT Expression
   37           | Lvalue •

    ASSIGNMENT  shift, and go to state 100

    $default  reduce using rule 37 (Expression)


State 63

   38 Expression: Call •

    $default  reduce using rule 38 (Expression)


State 64

   58 Statement: StmtBlock •

    $default  reduce using rule 58 (Statement)


State 65

   50 StmtBlock: CURLYLBRACKET Stmts • CURLYRBRACKET

    CURLYRBRACKET  shift, and go to state 101


State 66

   51 Stmts: Statement • Stmts

    INT            shift, and go to state 1
    DOUBLE         shift, and go to state 2
    BOOL           shift, and go to state 3
    STRING         shift, and go to state 4
    VOID           shift, and go to state 28
    ROUNDLBRACKET  shift, and go to state 49
    FOR            shift, and go to state 50
    IDENTIFIER     shift, and go to state 51
    NEW            shift, and go to state 52
    CURLYLBRACKET  shift, and go to state 39
    UNARY          shift, and go to state 53
    RETURN         shift, and go to state 54
    BREAK          shift, and go to state 55
    IF             shift, and go to state 56
    DO             shift, and go to state 57
    WHILE          shift, and go to state 58

    $default  reduce using rule 53 (Stmts)

    VarDecl          go to state 59
    type             go to state 60
    Expression       go to state 61
    Lvalue           go to state 62
    Call             go to state 63
    StmtBlock        go to state 64
    Stmts            go to state 102
    Statement        go to state 66
    ConditionalStmt  go to state 67
    LoopStmt         go to state 68
    OtherStmt        go to state 69
    WhileStmt        go to state 70
    DoWhileStmt      go to state 71
    ForStmt          go to state 72
    BreakStmt        go to state 73
    ReturnStmt       go to state 74


State 67

   55 Statement: ConditionalStmt •

    $default  reduce using rule 55 (Statement)


State 68

   56 Statement: LoopStmt •

    $default  reduce using rule 56 (Statement)


State 69

   57 Statement: OtherStmt •

    $default  reduce using rule 57 (Statement)


State 70

   61 LoopStmt: WhileStmt •

    $default  reduce using rule 61 (LoopStmt)


State 71

   63 LoopStmt: DoWhileStmt •

    $default  reduce using rule 63 (LoopStmt)


State 72

   62 LoopStmt: ForStmt •

    $default  reduce using rule 62 (LoopStmt)


State 73

   65 OtherStmt: BreakStmt •

    $default  reduce using rule 65 (OtherStmt)


State 74

   64 OtherStmt: ReturnStmt •

    $default  reduce using rule 64 (OtherStmt)


State 75

   12 VarDecl: IDENTIFIER NEWARRAY ROUNDLBRACKET INTEGER COMMA type • ROUNDRBRACKET SEMICOLON

    ROUNDRBRACKET  shift, and go to state 103


State 76

   13 FuncDecl: type IDENTIFIER ROUNDLBRACKET formalParameters ROUNDRBRACKET StmtBlock •

    $default  reduce using rule 13 (FuncDecl)


State 77

   27 formalParameterList: formalParameterList COMMA formalParameter •

    $default  reduce using rule 27 (formalParameterList)


State 78

   41 Lvalue: IDENTIFIER •
   44 Call: IDENTIFIER • ROUNDLBRACKET ActualParameters ROUNDRBRACKET

    ROUNDLBRACKET  shift, and go to state 81

    $default  reduce using rule 41 (Lvalue)


State 79

   30 Expression: Expression • ADDITIVE Expression
   31           | Expression • MULTIPLITIVE Expression
   32           | Expression • RELATIONAL Expression
   33           | Expression • EQUALITY Expression
   34           | Expression • AND Expression
   35           | Expression • OR Expression
   40           | ROUNDLBRACKET Expression • ROUNDRBRACKET
   42 Lvalue: Expression • DOT IDENTIFIER
   43       | Expression • SQUARELBRACKET Expression SQUARERBRACKET
   45 Call: Expression • DOT IDENTIFIER ROUNDLBRACKET ActualParameters ROUNDRBRACKET

    ROUNDRBRACKET   shift, and go to state 104
    MULTIPLITIVE    shift, and go to state 92
    ADDITIVE        shift, and go to state 93
    RELATIONAL      shift, and go to state 94
    EQUALITY        shift, and go to state 95
    AND             shift, and go to state 96
    OR              shift, and go to state 97
    DOT             shift, and go to state 98
    SQUARELBRACKET  shift, and go to state 99


State 80

   68 ForStmt: FOR ROUNDLBRACKET • Expression SEMICOLON Expression SEMICOLON Expression ROUNDRBRACKET Statement

    ROUNDLBRACKET  shift, and go to state 49
    IDENTIFIER     shift, and go to state 78
    NEW            shift, and go to state 52
    UNARY          shift, and go to state 53

    Expression  go to state 105
    Lvalue      go to state 62
    Call        go to state 63


State 81

   44 Call: IDENTIFIER ROUNDLBRACKET • ActualParameters ROUNDRBRACKET

    ROUNDLBRACKET  shift, and go to state 49
    IDENTIFIER     shift, and go to state 78
    NEW            shift, and go to state 52
    UNARY          shift, and go to state 53

    $default  reduce using rule 46 (ActualParameters)

    Expression            go to state 106
    Lvalue                go to state 62
    Call                  go to state 63
    ActualParameters      go to state 107
    ActualParametersList  go to state 108


State 82

   39 Expression: NEW ROUNDLBRACKET • IDENTIFIER ROUNDRBRACKET

    IDENTIFIER  shift, and go to state 109


State 83

   30 Expression: Expression • ADDITIVE Expression
   31           | Expression • MULTIPLITIVE Expression
   32           | Expression • RELATIONAL Expression
   33           | Expression • EQUALITY Expression
   34           | Expression • AND Expression
   35           | Expression • OR Expression
   36           | UNARY Expression •
   42 Lvalue: Expression • DOT IDENTIFIER
   43       | Expression • SQUARELBRACKET Expression SQUARERBRACKET
   45 Call: Expression • DOT IDENTIFIER ROUNDLBRACKET ActualParameters ROUNDRBRACKET

    DOT             shift, and go to state 98
    SQUARELBRACKET  shift, and go to state 99

    $default  reduce using rule 36 (Expression)


State 84

   30 Expression: Expression • ADDITIVE Expression
   31           | Expression • MULTIPLITIVE Expression
   32           | Expression • RELATIONAL Expression
   33           | Expression • EQUALITY Expression
   34           | Expression • AND Expression
   35           | Expression • OR Expression
   42 Lvalue: Expression • DOT IDENTIFIER
   43       | Expression • SQUARELBRACKET Expression SQUARERBRACKET
   45 Call: Expression • DOT IDENTIFIER ROUNDLBRACKET ActualParameters ROUNDRBRACKET
   70 ReturnStmt: RETURN Expression • SEMICOLON
